--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -126,6 +126,11 @@
                 <h3>Les tables de multiplication</h3>
                 <p>Apprenez-les autrement !</p>
             </a>
+               </a>
+             <a href="suivant_precedent.html" class="card-link">
+                <h3>Les voisins</h3>
+                <p>Nombre suivant et nombre précédent</p>
+            </a>
         </section>
     </div>
 </main>
