--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -131,7 +131,7 @@
                 <h3>Les voisins</h3>
                 <p>Nombre suivant et nombre précédent</p>
             </a>
-              <a href="pont_dizaine.html class="card-link">
+              <a href="pont_dizaine.html" class="card-link">
                 <h3>Pont vers la dizaine suivante</h3>
                 <p>Passer à la dizaine suivante</p>
             </a>
