--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -135,6 +135,11 @@
                 <h3>Pont vers la dizaine suivante</h3>
                 <p>Passer à la dizaine suivante</p>
             </a>
+            </a>
+              <a href="force_5.html" class="card-link">
+                <h3>Sommes avec 5</h3>
+                <p>Passer à la dizaine suivante</p>
+            </a>
         </section>
     </div>
 </main>
