--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -140,6 +140,11 @@
                 <h3>Sommes avec 5</h3>
                 <p>Passer à la dizaine suivante</p>
             </a>
+            </a>
+              <a href="grignoteur.html" class="card-link">
+                <h3>manger un nombre !</h3>
+                <p>Passer à la dizaine inférieure</p>
+            </a>
         </section>
     </div>
 </main>
