--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -142,8 +142,13 @@
             </a>
             </a>
               <a href="grignoteur.html" class="card-link">
-                <h3>manger un nombre !</h3>
+                <h3>Manger un nombre !</h3>
                 <p>Passer à la dizaine inférieure</p>
+            </a>
+            </a>
+              <a href="ajouter9_ajouter8.html" class="card-link">
+                <h3>Ajouter 9 ou 8 facilement</h3>
+                <p>Utilise l'astuce !</p>
             </a>
         </section>
     </div>
