--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -150,6 +150,11 @@
                 <h3>Ajouter 9 ou 8 facilement</h3>
                 <p>Utilise l'astuce !</p>
             </a>
+            </a>
+              <a href="enlever9_enlever8.html" class="card-link">
+                <h3>Enlever 9 ou 8 facilement</h3>
+                <p>Utilise l'astuce !</p>
+            </a>
         </section>
     </div>
 </main>
