--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -155,6 +155,10 @@
                 <h3>Enlever 9 ou 8 facilement</h3>
                 <p>Utilise l'astuce !</p>
             </a>
+            <a href="BOSS8FINAL.html" class="card-link">
+                <h3>Additions et soustractions chronométrées</h3>
+                <p>Calcul rapide - entrainement</p>
+            </a>
         </section>
     </div>
 </main>
