--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -159,6 +159,10 @@
                 <h3>Le BOSS final</h3>
                 <p>Calcul chronométré</p>
             </a>
+             <a href="generateur_rekenrek_cartes.html" class="card-link">
+                <h3>Générateur de cartes</h3>
+                <p>Pour impression</p>
+            </a>
         </section>
     </div>
 </main>
