--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -249,6 +249,12 @@
             <h3>Tables de multiplication</h3>
             <p>Visualiser les tables sur le boulier.</p>
         </a>
+        <a href="rekenrek_sheet_generator_1_mult.html" class="card-link">
+            <div class="icon-box">🖨️</div>
+            <h3>Générateur de fiches de calcul</h3>
+            <p>Créer des fiches PDF à imprimer</p>
+        </a>
+        
     </section>
 
 
