--- a/outils/bouliers/rekenrek/rekenrek_sheet_generator_double_niv1.html
+++ b/outils/bouliers/rekenrek/rekenrek_sheet_generator_double_niv1.html
@@ -6,12 +6,13 @@
   <title>REKENREK — DOUBLES NIVEAU 1</title>
   <style>
     :root {
-      --ink: #111827;
-      --sub: #94a3b8;
+      --ink: #111827; /* Gris noir profond */
+      --sub: #94a3b8; /* Gris clair élégant */
       --bg: #f8fafc;
       --panel: #ffffff;
       --accent: #2563eb;
       --border: #cbd5e1;
+      /* STYLE GRILLE v17 (Douceur) */
       --grid-line: #d9d9d9; 
       --ok: #16a34a;
       
@@ -26,9 +27,9 @@
     * { box-sizing: border-box; }
     body { margin: 0; font-family: 'Segoe UI', system-ui, sans-serif; background: var(--bg); color: var(--ink); display: flex; height: 100vh; overflow: hidden; }
 
-    /* --- SIDEBAR --- */
+    /* --- SIDEBAR (ÉLARGIE) --- */
     aside {
-      width: 320px;
+      width: 360px; /* Élargi pour éviter que le texte ne soit coupé */
       background: var(--panel);
       border-right: 1px solid var(--border);
       display: flex;
@@ -51,7 +52,7 @@
     select, input[type="number"] {
       padding: 8px 10px; border: 1px solid var(--border); border-radius: 6px;
       font-size: 13px; font-weight: 600; color: var(--ink); outline: none;
-      width: 130px; background: #fff; cursor: pointer; transition: border 0.2s;
+      width: 140px; background: #fff; cursor: pointer; transition: border 0.2s;
     }
     select:hover, input:hover { border-color: var(--accent); }
     input[type="checkbox"] { width: auto; transform: scale(1.3); cursor: pointer; accent-color: var(--accent); margin-right: 0; }
@@ -85,11 +86,28 @@
     }
     .page-inner { position: absolute; inset: var(--page-margin); display: flex; flex-direction: column; }
     
-    .header { margin-bottom: 6mm; padding-bottom: 2mm; }
-    .header h1 { margin: 0 0 4px 0; font-size: 26px; text-transform: uppercase; letter-spacing: 1px; font-weight: 900; color: var(--ink); }
-    .header p { margin: 0; font-size: 15px; color: var(--sub); font-family: 'Verdana', sans-serif; font-weight: 500; }
+    /* HEADER STYLISÉ */
+    .header { 
+      margin-bottom: 6mm; 
+      padding-bottom: 2mm; 
+    }
+    .header h1 { 
+      margin: 0 0 4px 0; 
+      font-size: 26px; 
+      text-transform: uppercase; 
+      letter-spacing: 1px; 
+      font-weight: 900; 
+      color: var(--ink); 
+    }
+    .header p { 
+      margin: 0; 
+      font-size: 15px; 
+      color: var(--sub); 
+      font-family: 'Verdana', sans-serif; 
+      font-weight: 500; 
+    }
 
-    /* GRILLE */
+    /* GRILLE STYLE v17 */
     .grid {
       flex: 1; display: grid;
       grid-template-columns: repeat(var(--cols), 1fr);
@@ -113,6 +131,7 @@
     .op-col .bar { height: 2px; background: #000; margin: 4px 0; width: 100%; }
 
     .num-val { font-size: 34px; font-weight: 900; }
+    /* Soulignement épais pour 6 et 9 */
     .u-69 { text-decoration: underline; text-decoration-thickness: 3px; text-underline-offset: 5px; }
 
     /* Correction */
@@ -140,6 +159,7 @@
       pointer-events: none;
     }
 
+    /* --- IMPRESSION --- */
     @media print {
       @page { size: A4; margin: 0; } 
       body { display: block; background: white; height: auto; overflow: visible; }
@@ -192,8 +212,8 @@
       <div class="control">
         <label data-i18n="lbl_trap_style">Style des Pièges</label>
         <select id="trapStyle" onchange="startGen()">
-          <option value="balanced" data-i18n="opt_bal">Subtils (Équilibrés)</option>
-          <option value="random" data-i18n="opt_rnd">Aléatoires (Hasard)</option>
+          <option value="random" data-i18n="opt_rnd">Facile (Hasard)</option>
+          <option value="balanced" data-i18n="opt_bal">Difficile (Subtil)</option>
         </select>
       </div>
       <div class="control">
@@ -272,8 +292,8 @@ const i18n = {
     sec_content: "Contenu",
     lbl_correct: "Nb. Justes",
     lbl_trap_style: "Style des Pièges",
-    opt_bal: "Subtils (Équilibrés)",
-    opt_rnd: "Aléatoires (Hasard)",
+    opt_bal: "Difficile (Subtil)",
+    opt_rnd: "Facile (Hasard)",
     lbl_display: "Affichage",
     opt_rr: "Boulier (100%)",
     opt_op: "Opérations (100%)",
@@ -305,8 +325,8 @@ const i18n = {
     sec_content: "Content",
     lbl_correct: "Correct Count",
     lbl_trap_style: "Traps Style",
-    opt_bal: "Subtle (Balanced)",
-    opt_rnd: "Random (Messy)",
+    opt_bal: "Hard (Subtle)",
+    opt_rnd: "Easy (Random)",
     lbl_display: "Display",
     opt_rr: "Rekenrek (100%)",
     opt_op: "Operations (100%)",
@@ -426,21 +446,18 @@ function startGen() {
   for(let k=0; k<slotsRemaining; k++) {
     let a, b;
     if(trapStyle === 'balanced') {
-      // Équilibré : écart de 1 => Somme IMPAIRE => Jamais un double
+      // Difficile (Subtil) : écart de 1 => Somme IMPAIRE => Jamais un double
       a = rand(0, 9);
       b = a + 1;
       if(Math.random() > 0.5) [a, b] = [b, a]; 
     } else {
-      // Aléatoire SÉCURISÉ : On force des parités différentes
+      // Facile (Aléatoire) SÉCURISÉ : On force des parités différentes
       // Cela garantit que a+b est IMPAIR, donc jamais un double.
-      // a = Pair, b = Impair OU inverse.
       const isAEven = Math.random() > 0.5;
       if(isAEven) {
-        // a pair (0,2,4,6,8,10), b impair (1,3,5,7,9)
         a = rand(0, 5) * 2;
         b = rand(0, 4) * 2 + 1;
       } else {
-        // a impair, b pair
         a = rand(0, 4) * 2 + 1;
         b = rand(0, 5) * 2;
       }
