--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -252,7 +252,7 @@
         <a href="rekenrek_sheet_generator_double_niv1.html" class="card-link">
             <div class="icon-box">🖨️</div>
             <h3>Générateur de fiches de calcul</h3>
-            <p>Double - niveau 1</p>
+            <p>Double, tables</p>
         </a>
         
     </section>
