--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -189,6 +189,11 @@
             <h3>Cache-cache</h3>
             <p>Trouver le nombre de billes cachées (Compléments).</p>
         </a>
+        <a href="rekenrek_sheet_generator_lecture.html" class="card-link">
+            <div class="icon-box">🖨️</div>
+            <h3>Générateur de fiches de calcul</h3>
+            <p>Double, tables</p>
+        </a>
     </section>
 
 
