--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -192,7 +192,7 @@
         <a href="rekenrek_sheet_generator_lecture.html" class="card-link">
             <div class="icon-box">🖨️</div>
             <h3>Générateur de fiches de calcul</h3>
-            <p>Double, tables</p>
+            <p>Lecture, compléments</p>
         </a>
     </section>
 
